--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.20.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -46,15 +47,18 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.1",
     "@bytemd/plugin-gemoji": "^1.17.2",
     "@bytemd/plugin-gfm": "^1.17.4",
     "@bytemd/plugin-highlight-ssr": "^1.17.2",
     "@bytemd/plugin-medium-zoom": "^1.17.2",
     "@bytemd/react": "^1.17.2",
+    "antd": "^4.24.2",
     "axios": "^1.1.3",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-loader": "next",
     "react-router-dom": "^6.4.3",
     "remark-gemoji": "^7.0.1"
   }
